fix search bar not centered

--- a/chrome/urlbar/urlbar.css
+++ b/chrome/urlbar/urlbar.css
@@ -172,7 +172,6 @@
 	-moz-box-align: center !important;
 	display: block !important;
 	margin: 0 !important;
-	top: 0 !important;
 	color: inherit !important;
 	
 	--urlbar-height: 28px !important;
